--- a/paquete-naturaleza.html
+++ b/paquete-naturaleza.html
@@ -418,19 +418,19 @@ footer{
 
     <div class="gallery" role="list" aria-label="Galería de imágenes cataratas y compras">
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/iguazu-1.jpg" alt="Vista panorámica de las cataratas" loading="lazy">
+        <img src="iguazu-1.webp" alt="Vista panorámica de las cataratas" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/iguazu-2.jpg" alt="Sendero en el parque nacional" loading="lazy">
+        <img src="iguazu-2.jpg" alt="Sendero en el parque nacional" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/iguazu-3.jpg" alt="Paseo en bote bajo las cataratas" loading="lazy">
+        <img src="iguazu-3.jpg" alt="Paseo en bote bajo las cataratas" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/ceu-1.jpg" alt="Compras en Ciudad del Este" loading="lazy">
+        <img src="ceu-1.jpg" alt="Compras en Ciudad del Este" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/ceu-2.jpg" alt="Productos y tiendas locales" loading="lazy">
+        <img src="ceu-2.jpg" alt="Productos y tiendas locales" loading="lazy">
       </div>
     </div>
   </section>
@@ -511,7 +511,7 @@ footer{
 
     <div class="experience-cards" style="margin-top:12px">
       <div class="exp card">
-        <img src="img/paseo-bote.jpg" alt="Paseo en bote bajo las cataratas">
+        <img src="paseo-bote.jpg" alt="Paseo en bote bajo las cataratas">
         <div class="exp-body">
           <h4>Paseo en bote</h4>
           <p style="color:var(--muted);margin:8px 0 0">Vive la emoción de acercarte a la base de las cataratas, una experiencia única y refrescante.</p>
@@ -519,7 +519,7 @@ footer{
       </div>
 
       <div class="exp card">
-        <img src="img/selva-iguazu.jpg" alt="Senderos de la selva en Iguazú">
+        <img src="selva-iguazu.jpg" alt="Senderos de la selva en Iguazú">
         <div class="exp-body">
           <h4>Caminatas en la selva</h4>
           <p style="color:var(--muted);margin:8px 0 0">Descubre flora y fauna autóctona mientras recorres senderos guiados por la selva misionera.</p>
@@ -527,7 +527,7 @@ footer{
       </div>
 
       <div class="exp card">
-        <img src="img/ceu-compras.jpg" alt="Recorrido de compras en Ciudad del Este">
+        <img src="ceu-compras.jpg" alt="Recorrido de compras en Ciudad del Este">
         <div class="exp-body">
           <h4>Compras guiadas</h4>
           <p style="color:var(--muted);margin:8px 0 0">Aprende a aprovechar los mejores precios y productos de la ciudad con nuestro guía experto.</p>
