--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -448,19 +448,19 @@ footer {
 
     <div class="gallery" role="list" aria-label="Galería de imágenes Sol y Playa">
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/floripa-1.jpg" alt="Playa de Florianópolis con arena blanca" loading="lazy">
+        <img src="floripa-1.jpg" alt="Playa de Florianópolis con arena blanca" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/floripa-2.jpg" alt="Mar cristalino en la isla" loading="lazy">
+        <img src="floripa-2.jpg" alt="Mar cristalino en la isla" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/floripa-3.jpg" alt="Vista panorámica de la isla desde un mirador" loading="lazy">
+        <img src="floripa-3.jpg" alt="Vista panorámica de la isla desde un mirador" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/floripa-4.jpg" alt="Actividades de surf y deportes acuáticos" loading="lazy">
+        <img src="floripa-4.jpg" alt="Actividades de surf y deportes acuáticos" loading="lazy">
       </div>
       <div class="gallery-item" role="listitem" tabindex="0">
-        <img src="img/floripa-5.jpg" alt="Puesta de sol en la playa" loading="lazy">
+        <img src="floripa-5.jpg" alt="Puesta de sol en la playa" loading="lazy">
       </div>
     </div>
   </section>
@@ -541,7 +541,7 @@ footer {
 
     <div class="experience-cards" style="margin-top:12px">
       <div class="exp card">
-        <img src="img/surf-floripa.jpg" alt="Surf en Florianópolis">
+        <img src="surf-floripa.avif" alt="Surf en Florianópolis">
         <div class="exp-body">
           <h4>Surf y deportes acuáticos</h4>
           <p style="color:var(--muted);margin:8px 0 0">Clases y actividades guiadas para disfrutar del mar cristalino y las olas perfectas.</p>
@@ -549,7 +549,7 @@ footer {
       </div>
 
       <div class="exp card">
-        <img src="img/mirador-floripa.jpg" alt="Mirador panorámico de la isla">
+        <img src="mirador-floripa.jpg" alt="Mirador panorámico de la isla">
         <div class="exp-body">
           <h4>Miradores panorámicos</h4>
           <p style="color:var(--muted);margin:8px 0 0">Capturá vistas espectaculares de Florianópolis y sus playas desde los puntos más altos de la isla.</p>
@@ -557,7 +557,7 @@ footer {
       </div>
 
       <div class="exp card">
-        <img src="img/barco-floripa.jpg" alt="Paseo en barco por la isla">
+        <img src="barco-floripa.jpg" alt="Paseo en barco por la isla">
         <div class="exp-body">
           <h4>Paseos en barco</h4>
           <p style="color:var(--muted);margin:8px 0 0">Recorré la costa y descubrí calas secretas y playas accesibles solo por mar.</p>
