--- a/destinos.html
+++ b/destinos.html
@@ -150,37 +150,85 @@
         <img src="gal11.jpg" alt="Cabo Polonio">
         <h3>Cabo Polonio</h3>
         <p>Un paraíso natural sin calles ni autos, dunas y lobos marinos. Ideal para desconectar.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
       <article class="card fade-in">
         <img src="gal12.jpeg" alt="Bariloche">
         <h3>Bariloche</h3>
         <p>Lagos, montañas y chocolate artesanal en la Patagonia argentina. Ideal para amantes de la aventura y la naturaleza.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
       <article class="card fade-in">
         <img src="gal9.jpg" alt="La Paloma">
         <h3>La Paloma</h3>
         <p>Playas extensas, surf y atardeceres inolvidables. El balneario ideal para familias y jóvenes.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
       <article class="card fade-in">
         <img src="gal13.jpg" alt="Salto Termal">
         <h3>Salto Termal</h3>
         <p>Relajación total en aguas termales, parques acuáticos y hoteles spa. Ideal para descansar.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
       <article class="card fade-in">
         <img src="gal10.jpg" alt="Montevideo Cultural">
         <h3>Montevideo Cultural</h3>
         <p>Teatros, museos, ferias y gastronomía. La capital uruguaya te espera con propuestas todo el año.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
       <article class="card fade-in">
         <img src="gal1.jpg" alt="Río de Janeiro">
         <h3>Río de Janeiro</h3>
         <p>La ciudad maravillosa: playas, samba y cultura brasileña. Salidas internacionales desde San José.</p>
-        <a href="rio.html" class="btn">Ver más</a>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+      <article class="card fade-in">
+        <img src="buenosaires.jpg" alt="Buenos Aires">
+        <h3>Buenos Aires</h3>
+        <p>La capital argentina te espera con tango, gastronomía, historia y vida nocturna. Ideal para escapadas urbanas desde Uruguay.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="mendoza.jpg" alt="Mendoza">
+        <h3>Mendoza</h3>
+        <p>Entre viñedos, montañas y bodegas, Mendoza ofrece paisajes únicos y experiencias gastronómicas de primer nivel.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="chile.webp" alt="Chile">
+        <h3>Chile</h3>
+        <p>De norte a sur, un país lleno de contrastes: desiertos, montañas, nieve y mar. Ideal para aventuras y naturaleza.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="norteargentino.jpg" alt="Norte Argentino">
+        <h3>Norte Argentino</h3>
+        <p>Coloridos cerros, cultura andina y pueblos mágicos como Purmamarca y Cafayate. Una experiencia auténtica del interior.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="surargentino.webp" alt="Sur Argentino">
+        <h3>Sur Argentino</h3>
+        <p>Glaciares, lagos y bosques infinitos. Desde Bariloche hasta Ushuaia, un recorrido por la Patagonia más pura.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="floripa.jpg" alt="Brasil y Playas">
+        <h3>Brasil y Playas</h3>
+        <p>Florianópolis, Bombinhas, Camboriú y más. Playas paradisíacas, clima cálido y la alegría brasileña en cada rincón.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
+      </article>
+
+      <article class="card fade-in">
+        <img src="iguacu.jpg" alt="Cataratas del Iguazú">
+        <h3>Cataratas del Iguazú</h3>
+        <p>Una de las siete maravillas naturales del mundo. Naturaleza, adrenalina y fronteras entre Argentina, Brasil y Paraguay.</p>
+        <a href="contacto.html" class="btn">Ver más</a>
       </article>
     </div>
   </section>
