--- a/paquete-naturaleza.html
+++ b/paquete-naturaleza.html
@@ -149,6 +149,11 @@ nav {
   margin-top:10px;
   font-size:0.95rem;
 }
+@media (max-width: 768px) {
+  .contenedorr {
+    justify-content: center;
+  }
+}
 
 /* Ajuste mobile hero */
 @media(max-width:980px){
@@ -359,6 +364,7 @@ footer{
   text-align:center;
 }
 
+
   </style>
 </head>
 <body>
@@ -397,8 +403,8 @@ footer{
   </div>
 
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:10px;">
-    <a class="btn-primary" href="contacto.html" title="Consultar paquete cataratas">consultar paquete</a>
-    <a class="btn-secondary" href="#detalles" title="Ver más detalles">ver detalles</a>
+    <a class="btn-primary" href="contacto.html" title="Consultar paquete cataratas">Consultar paquete</a>
+    <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
   </div>
 </div>
 
@@ -477,9 +483,9 @@ footer{
       <h3 style="margin-top:16px">Recomendado para</h3>
       <p>Amantes de la naturaleza y las experiencias de compras, familias, parejas y grupos que buscan un viaje completo y dinámico.</p>
 
-      <div style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn-primary" href="contacto.html" title="Reservar paquete cataratas">reservar ahora</a>
-        <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Cataratas%20y%20Compras" title="Contactar por mail">consultar por mail</a>
+      <div class="contenedorr" style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
+        <a class="btn-primary" href="contacto.html" title="Reservar paquete cataratas">Reservar ahora</a>
+        <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Cataratas%20y%20Compras" title="Contactar por mail">Consultar por mail</a>
       </div>
     </section>
 
@@ -537,8 +543,8 @@ footer{
   </section>
 
   <div class="cta fade-in" role="region" aria-label="Llamado a la acción">
-    <a class="btn-primary" href="contacto.html">reservá tu viaje a Iguazú</a>
-    <a class="btn-secondary" href="paquetes.html">ver otros paquetes</a>
+    <a class="btn-primary" href="contacto.html">Reservá tu viaje a Iguazú</a>
+    <a class="btn-secondary" href="index.html">Ver otros paquetes</a>
   </div>
 
   <p style="font-size:0.85rem;color:var(--muted);text-align:center;margin-top:6px;">*Precio referencial por persona en base doble. Consultar fechas y disponibilidad.</p>
