--- a/paquete-termas.html
+++ b/paquete-termas.html
@@ -238,7 +238,12 @@ footer {
 }
 
 /* ------------------ RESPONSIVE FIXES (ONLY MOBILE CHANGES) ------------------ */
-/* These media queries contain all changes so desktop stays exactly igual. */
+@media (max-width: 768px) {
+  .contenedorr {
+    justify-content: center;
+  }
+}
+
 
 /* Medium breakpoint: adjust hero layout stacking */
 @media (max-width: 980px) {
@@ -360,8 +365,8 @@ a:focus, button:focus, .gallery-item:focus { outline: 3px solid rgba(12,154,166,
           </div>
 
           <div style="margin-top:18px">
-            <a class="btn-primary" href="contacto.html" title="Consultar paquete termas">consultar paquete</a>
-            <a class="btn-secondary" href="#detalles" title="Ver más detalles">ver detalles</a>
+            <a class="btn-primary" href="contacto.html" title="Consultar paquete termas">Consultar paquete</a>
+            <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
           </div>
         </div>
 
@@ -437,9 +442,9 @@ a:focus, button:focus, .gallery-item:focus { outline: 3px solid rgba(12,154,166,
         <h3 style="margin-top:16px">Recomendado para</h3>
         <p>Personas que buscan descanso activo, parejas, grupos reducidos y quienes quieran combinar salud termal con paseos tranquilos por entorno natural.</p>
 
-        <div style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
-          <a class="btn-primary" href="contacto.html" title="Reservar paquete termas">reservar ahora</a>
-          <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Termas%20Romanas" title="Contactar por mail">consultar por mail</a>
+        <div class="contenedorr" style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
+          <a class="btn-primary" href="contacto.html" title="Reservar paquete termas">Reservar ahora</a>
+          <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Termas%20Romanas" title="Contactar por mail">Consultar por mail</a>
         </div>
       </section>
 
@@ -507,8 +512,8 @@ a:focus, button:focus, .gallery-item:focus { outline: 3px solid rgba(12,154,166,
 
     <!-- CTA -->
     <div class="cta fade-in" role="region" aria-label="Llamado a la acción">
-      <a class="btn-primary" href="contacto.html">reservá tu escapada termal</a>
-      <a class="btn-secondary" href="paquetes.html">ver otros paquetes</a>
+      <a class="btn-primary" href="contacto.html">Reservá tu escapada termal</a>
+      <a class="btn-secondary" href="index.html">Ver otros paquetes</a>
     </div>
 
     <p style="font-size:0.85rem;color:var(--muted);text-align:center;margin-top:6px;">*Precio referencial por persona en base doble. Consultar fechas y disponibilidad.</p>
