--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -366,7 +366,14 @@ footer {
 }
 /* small aesthetic touch: subtle fade-in */
 
+
 /* ------------------ MEDIA QUERIES ------------------ */
+@media (max-width: 768px) {
+  .contenedorr {
+    justify-content: center;
+  }
+}
+
 @media(max-width:980px){
   .hero-inner {
     grid-template-columns: 1fr;
@@ -390,6 +397,20 @@ footer {
     height: 120px;
   }
 }
+.two-col {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 24px;
+  align-items: start;
+}
+
+/* Vista móvil */
+@media (max-width: 980px) {
+  .two-col {
+    grid-template-columns: 1fr;
+  }
+}
+
 
   </style>
 </head>
@@ -429,8 +450,8 @@ footer {
         </div>
 
         <div style="margin-top:18px">
-          <a class="btn-primary" href="contacto.html" title="Consultar paquete Sol y Playa">consultar paquete</a>
-          <a class="btn-secondary" href="#detalles" title="Ver más detalles">ver detalles</a>
+          <a class="btn-primary" href="contacto.html" title="Consultar paquete Sol y Playa">Consultar paquete</a>
+          <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
         </div>
       </div>
 
@@ -507,9 +528,9 @@ footer {
       <h3 style="margin-top:16px">Recomendado para</h3>
       <p>Amantes de la playa, parejas, grupos de amigos y familias que buscan relajarse y disfrutar de la energía brasileña.</p>
 
-      <div style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn-primary" href="contacto.html" title="Reservar paquete Sol y Playa">reservar ahora</a>
-        <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Sol%20y%20Playa" title="Contactar por mail">consultar por mail</a>
+      <div class="contenedorr" style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
+        <a class="btn-primary" href="contacto.html" title="Reservar paquete Sol y Playa">Reservar ahora</a>
+        <a class="btn-secondary" href="mailto:info@elturista.uy?subject=Consulta%20Sol%20y%20Playa" title="Contactar por mail">Consultar por mail</a>
       </div>
     </section>
 
@@ -567,8 +588,8 @@ footer {
   </section>
 
   <div class="cta fade-in" role="region" aria-label="Llamado a la acción final">
-    <a class="btn-primary" href="contacto.html">reservá tu viaje a Florianópolis</a>
-    <a class="btn-secondary" href="paquetes.html">ver otros paquetes</a>
+    <a class="btn-primary" href="contacto.html">Reservá tu viaje a Florianópolis</a>
+    <a class="btn-secondary" href="index.html">Ver otros paquetes</a>
   </div>
 
   <p style="font-size:0.85rem;color:var(--muted);text-align:center;margin-top:6px;">*Precio referencial por persona en base doble. Consultar fechas y disponibilidad.</p>
