--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
             <th>Fecha</th>
             <th>Destino</th>
             <th>Tipo de paquete</th>
+            <th>Precio</th>
           </tr>
         </thead>
         <tbody>
-          <tr><td>12/10/2025</td><td>Colonia del Sacramento</td><td>Escapada fin de semana</td></tr>
-          <tr><td>20/10/2025</td><td>Punta del Este</td><td>Playa & vida nocturna</td></tr>
-          <tr><td>05/11/2025</td><td>Río de Janeiro</td><td>Paquete todo incluido</td></tr>
+          <tr><td>12/10/2025</td><td>Colonia</td><td>Fin de semana (3 dias)</td><td>100usd</td></tr>
+          <tr><td>20/10/2025</td><td>Punta del Este</td><td>Playa & vida nocturna (3 dias)</td><td>100usd</td></tr>
+          <tr><td>05/11/2025</td><td>Río de Janeiro</td><td>Paquete todo incluido (3 dias)</td><td>100usd</td></tr>        
         </tbody>
       </table>
     </div>
