--- a/index.html
+++ b/index.html
@@ -218,14 +218,11 @@
 
   <!-- VIAJES -->
 <section id="viajes" class="section">
-  <h3 class="fade-in">Destinos y próximas salidas aseguradas</h3>
   <div style="display:flex;gap:20px;flex-wrap:wrap;margin-top:12px;">
-    <!-- Mapa -->
-    <div id="mapa" class="fade-in" style="flex:1;min-width:300px;height:400px;border-radius:12px;overflow:hidden;"></div>
     <!-- Calendario simple -->
     <div class="fade-in" style="flex:1;min-width:300px;">
-      <h4 style="margin-bottom:10px;">Próximas salidas confirmadas</h4>
-      <table style="width:100%;border-collapse:collapse;">
+      <h4 style="margin-bottom:10px; font-size: 2rem; color: var(--primary); text-align: center;">Próximas salidas confirmadas</h4>
+      <table style="width:100%;border-collapse:separate;">
         <thead>
           <tr style="background:#0077ff;color:white;">
             <th>Fecha</th>
@@ -235,12 +232,14 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>12/10/2025</td><td>Colonia</td><td>Fin de semana (3 dias)</td><td>100usd</td></tr>
+          <tr><td>12/10/2025</td><td>Colonia </td><td>Fin de semana (3 dias)</td><td>100usd</td></tr>
           <tr><td>20/10/2025</td><td>Punta del Este</td><td>Playa & vida nocturna (3 dias)</td><td>100usd</td></tr>
           <tr><td>05/11/2025</td><td>Río de Janeiro</td><td>Paquete todo incluido (3 dias)</td><td>100usd</td></tr>        
         </tbody>
       </table>
     </div>
+     <!-- Mapa -->
+    <div id="mapa" class="fade-in" style="flex:1;min-width:300px;height:400px;border-radius:12px;overflow:hidden;"></div>
   </div>
 </section>
 
