--- a/contacto.html
+++ b/contacto.html
@@ -140,7 +140,7 @@
       <form id="contactForm" onsubmit="submitForm(event)" style="display:flex;flex-direction:column;gap:14px;">
         <input type="text" id="name" name="name" placeholder="✏️ Tu nombre" required />
         <input type="email" id="email" name="email" placeholder="📧 Tu email" required />
-        <input type="text" id="phone" name="phone" placeholder="📱 Teléfono (opcional)" />
+        <input type="text" id="phone" name="phone" placeholder="📱 Teléfono" />
         <textarea id="message" name="message" rows="6" placeholder="💬 Contanos tu consulta..." required></textarea>
         <button type="submit">📩 Enviar mensaje</button>
       </form>
