--- a/rentabus.html
+++ b/rentabus.html
@@ -127,7 +127,7 @@
         Un moderno coche semicama de <strong>48 plazas</strong>, con chofer profesional y todas las comodidades para tu grupo.
       </p>
       <ul class="service-list fade-in" style="color:#333; line-height:1.6; margin-bottom:20px;">
-        <li>Salida exclusiva desde San José</li>
+        <li>Salida desde cualquier punto del país</li>
         <li>Butacas semicama reclinables</li>
         <li>Aire acondicionado y WiFi a bordo</li>
         <li>Baño higiénico</li>
@@ -151,7 +151,8 @@
         <input type="text" name="name" placeholder="✏️ Tu nombre" required />
         <input type="email" name="email" placeholder="📧 Tu email" required />
         <input type="text" name="phone" placeholder="📱 Teléfono de contacto" />
-        <input type="text" name="destination" placeholder="🎯 Destino del viaje" required />
+        <input type="text" name="destination" placeholder=" Origen del viaje" required />
+         <input type="text" name="origen" placeholder="🎯 Destino del viaje" required />
         <input type="number" name="passengers" placeholder="👥 N° de pasajeros (máx. 48)" required />
         <textarea name="message" rows="4" placeholder="💬 Detalles adicionales (fecha, horarios, etc.)..." required></textarea>
         <button type="submit">🚀 Enviar solicitud</button>
