--- a/rentabus.html
+++ b/rentabus.html
@@ -151,7 +151,7 @@
         <input type="text" name="name" placeholder="✏️ Tu nombre" required />
         <input type="email" name="email" placeholder="📧 Tu email" required />
         <input type="text" name="phone" placeholder="📱 Teléfono de contacto" />
-        <input type="text" name="destination" placeholder=" Origen del viaje" required />
+        <input type="text" name="destination" placeholder="🏠 Origen del viaje" required />
          <input type="text" name="origen" placeholder="🎯 Destino del viaje" required />
         <input type="number" name="passengers" placeholder="👥 N° de pasajeros (máx. 48)" required />
         <textarea name="message" rows="4" placeholder="💬 Detalles adicionales (fecha, horarios, etc.)..." required></textarea>
