--- a/sobre.html
+++ b/sobre.html
@@ -272,17 +272,17 @@
     <div class="team-grid">
       <div class="team-card fade-in">
         <div class="emoji">🧭</div>
-        <h4>Daniela</h4>
+        <h4>Martin</h4>
         <p>Coordinación de viajes nacionales</p>
       </div>
       <div class="team-card fade-in">
-        <div class="emoji">🌎</div>
-        <h4>Mauricio</h4>
-        <p>Especialista en viajes internacionales</p>
+        <div class="emoji">📷</div>
+        <h4>Trinidad</h4>
+        <p>Community Manager</p>
       </div>
       <div class="team-card fade-in">
         <div class="emoji">🤝</div>
-        <h4>Agustín</h4>
+        <h4>Vanesa</h4>
         <p>Diseño de experiencias y atención al cliente</p>
       </div>
     </div>
