--- a/index.html
+++ b/index.html
@@ -471,6 +471,23 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="script.js"></script>
+<!-- Modal inicial al cargar -->
+<div id="initialModal" style="
+    display:none;
+    position:fixed;
+    inset:0;
+    background: rgba(0,0,0,0.5);
+    justify-content:center;
+    align-items:center;
+    z-index:99999;
+">
+  <img src="azul.png" alt="Imagen inicial" style="
+      max-width:80%;
+      max-height:80%;
+      border-radius:12px;
+      box-shadow:0 4px 20px rgba(0,0,0,0.4);
+  ">
+</div>
 
 <script>
   // Inicializar mapa centrado en Uruguay
