boton ver detalles

--- a/paquete-naturaleza.html
+++ b/paquete-naturaleza.html
@@ -402,10 +402,11 @@ footer{
     <span class="pill">Entradas a parque y tour de compras</span>
   </div>
 
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:10px;">
-    <a class="btn-primary" href="contacto.html" title="Consultar paquete cataratas">Consultar paquete</a>
-    <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
-  </div>
+<div style="margin-top:18px; display:flex; flex-direction:column; gap:12px;">
+  <a class="btn-primary" href="contacto.html" title="Consultar paquete naturaleza">Consultar paquete</a>
+  <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
+</div>
+
 </div>
 
       </div>
