--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -449,10 +449,11 @@ footer {
           <span class="pill">Actividades de playa y paseo por la isla</span>
         </div>
 
-        <div style="margin-top:18px">
-          <a class="btn-primary" href="contacto.html" title="Consultar paquete Sol y Playa">Consultar paquete</a>
-          <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
-        </div>
+       <div style="margin-top:18px; display:flex; flex-direction:column; gap:12px;">
+  <a class="btn-primary" href="contacto.html" title="Consultar paquete Sol y Playa">Consultar paquete</a>
+  <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
+</div>
+
       </div>
 
       <aside class="hero-card" aria-label="Resumen rápido del paquete">
