--- a/paquete-termas.html
+++ b/paquete-termas.html
@@ -364,10 +364,11 @@ a:focus, button:focus, .gallery-item:focus { outline: 3px solid rgba(12,154,166,
             <span class="pill">Acceso ilimitado a complejos termales</span>
           </div>
 
-          <div style="margin-top:18px">
-            <a class="btn-primary" href="contacto.html" title="Consultar paquete termas">Consultar paquete</a>
-            <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
-          </div>
+         <div style="margin-top:18px; display:flex; flex-direction:column; gap:12px;">
+  <a class="btn-primary" href="contacto.html" title="Consultar paquetetermas">Consultar paquete</a>
+  <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
+</div>
+
         </div>
 
         <aside class="hero-card" aria-label="Resumen rápido del paquete">
