--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -115,11 +115,13 @@ nav {
 }
 
 .hero-inner {
-  display: grid;
-  grid-template-columns: 1fr 420px;
-  gap: 2rem;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centra horizontalmente */
+  justify-content: center; /* centra verticalmente */
+  gap: 1.5rem;
 }
+
 
 .hero-title {
   font-size: 2.1rem;
