--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -368,6 +368,45 @@ footer {
 }
 /* small aesthetic touch: subtle fade-in */
 
+/* Hero text centrado y contenido responsivo */
+.hero-inner > div:first-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;   /* centra horizontalmente */
+  text-align: center;    /* centra el texto */
+  max-width: 100%;       /* evita que se salga del contenedor */
+  box-sizing: border-box;
+  padding: 0 1rem;
+}
+
+/* Ajustes específicos para móvil */
+@media (max-width: 980px) {
+  .hero-inner {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    text-align: center;
+  }
+
+  .hero-inner > aside.hero-card {
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
+  /* Botones hero apilados y centrados */
+  .hero div > div,
+  .hero div > a {
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .pill {
+    margin: 6px auto;
+  }
+}
+
 
 /* ------------------ MEDIA QUERIES ------------------ */
 @media (max-width: 768px) {
@@ -451,10 +490,11 @@ footer {
           <span class="pill">Actividades de playa y paseo por la isla</span>
         </div>
 
-       <div style="margin-top:18px; display:flex; flex-direction:column; gap:12px;">
+     <div style="margin-top:18px; display:flex; flex-direction:column; gap:12px; align-items:center;">
   <a class="btn-primary" href="contacto.html" title="Consultar paquete Sol y Playa">Consultar paquete</a>
   <a class="btn-secondary" href="#detalles" title="Ver más detalles">Ver detalles</a>
 </div>
+
 
       </div>
 
@@ -600,150 +640,242 @@ footer {
 
 <!-- FOOTER -->
 <footer class="footer">
-  <style>
-    /* ------------------ FOOTER AZUL ELEGANTE ------------------ */
-    .footer {
-      background: #0d1b2a; /* azul profundo */
-      color: #e6e6e6;
-      padding: 3rem 1rem 1rem;
-    }
+<style>
+  :root {
+    --color-accent: #f57c00; /* Naranja principal */
+  }
 
-    .footer-container {
-      max-width: 75rem;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 2rem;
-    }
+.hero {
+  position: relative;
+  width: 100%;
+  min-height: 70vh; /* en lugar de 100vh */
+background: linear-gradient(
+    rgba(255, 145, 0, 0.55),
+    rgba(255, 94, 0, 0.55)
+  ),
+    url('img/floripa.jpg') center center / cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0 1.2rem;
+  color: #fff;
+  margin-top: 1rem;
+  
+}
 
-    .footer-col h4 {
-      font-size: 1.1rem;
-      margin-bottom: 0.8rem;
-      color: #fff;
-    }
+.hero-content {
+  max-width: 650px;
+  background: rgba(0, 0, 0, 0.35); /* leve fondo translúcido */
+  padding: 2rem;
+  border-radius: 1.2rem;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+}
 
-    .footer-col p {
-      color: #c9d6df;
-      font-size: 0.95rem;
-      line-height: 1.5;
-    }
+.hero h1 {
+  font-size: clamp(1.8rem, 4vw, 3rem);
+  margin-bottom: 0.8rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #fff;
+}
 
-    .footer-logo {
-      height: 3rem;
-      margin-bottom: 0.8rem;
-    }
+.hero p {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  margin-bottom: 1.6rem;
+  color: #f8f8f8;
+}
 
-    .footer-col ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .footer-col ul li {
-      margin-bottom: 0.5rem;
-    }
-
-    .footer-col ul li a {
-      color: #c9d6df;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    .footer-col ul li a:hover {
-      color: #4da8da;
-    }
-
-    .btn-maps {
-      display: inline-block;
-      margin-top: 0.5rem;
-      padding: 0.4rem 0.8rem;
-      background: #1b263b;
-      color: #fff;
-      border-radius: 6px;
-      font-size: 0.85rem;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    .btn-maps:hover {
-      background: #415a77;
-    }
-
-    .newsletter-form {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-    }
-    .newsletter-form input {
-      flex: 1;
-      padding: 0.6rem;
-      border: 1px solid #415a77;
-      border-radius: 6px;
-      background: #1b263b;
-      color: #fff;
-    }
-    .newsletter-form input::placeholder {
-      color: #8d99ae;
-    }
-    .newsletter-form button {
-      background: #4da8da;
-      color: #fff;
-      border: none;
-      padding: 0.6rem 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .newsletter-form button:hover {
-      background: #1e90ff;
-    }
-
-    .socials {
-      margin-top: 1rem;
-    }
-    .socials a {
-      margin-right: 0.8rem;
-      font-size: 1.3rem;
-      color: #4da8da;
-      transition: transform 0.2s, color 0.3s;
-    }
-    .socials a:hover {
-      transform: scale(1.2);
-      color: #1e90ff;
-    }
-
-    .footer-bottom {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: #8d99ae;
-      border-top: 1px solid #415a77;
-      padding-top: 1rem;
-    }
-    .phone-link {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #fff; /* si tu footer es azul */
+.hero a {
+  background: var(--color-accent);
+  color: #fff;
+  padding: 0.8rem 1.8rem;
+  border-radius: 40px;
   text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
 }
 
-.phone-link:hover {
-  text-decoration: underline;
-  color: #ffdd57; /* un color contraste */
+.hero a:hover {
+  background: #ff934f;
+  transform: translateY(-2px);
 }
 
-    .hidden-link {
-  color: inherit;
-  text-decoration: none;
-  background: transparent;
+/* MOBILE */
+@media (max-width: 768px) {
+  .hero {
+    min-height: 60vh;
+    padding: 0 1rem;
+    background-position: center top;
+  }
+
+  .hero-content {
+    padding: 1.5rem;
+    max-width: 90%;
+  }
+
+  .hero h1 {
+    font-size: 2rem;
+  }
+
+  .hero p {
+    font-size: 1rem;
+  }
 }
 
-/* Evita cambios de color en visitado, hover o active */
-.hidden-link:visited,
-.hidden-link:hover,
-.hidden-link:active {
-  color: inherit;
-  text-decoration: none;
-}
-  </style>
+
+  /* ------------------ FOOTER AZUL ELEGANTE ------------------ */
+  .footer {
+    background: #0d1b2a; /* azul profundo */
+    color: #e6e6e6;
+    padding: 3rem 1rem 1rem;
+  }
+
+  .footer-container {
+    max-width: 75rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 2rem;
+  }
+
+  .footer-col h4 {
+    font-size: 1.1rem;
+    margin-bottom: 0.8rem;
+    color: #fff;
+  }
+
+  .footer-col p {
+    color: #c9d6df;
+    font-size: 0.95rem;
+    line-height: 1.5;
+  }
+
+  .footer-logo {
+    height: 3rem;
+    margin-bottom: 0.8rem;
+  }
+
+  .footer-col ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .footer-col ul li {
+    margin-bottom: 0.5rem;
+  }
+
+  .footer-col ul li a {
+    color: #c9d6df;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+
+  .footer-col ul li a:hover {
+    color: #4da8da;
+  }
+
+  .btn-maps {
+    display: inline-block;
+    margin-top: 0.5rem;
+    padding: 0.4rem 0.8rem;
+    background: #1b263b;
+    color: #fff;
+    border-radius: 6px;
+    font-size: 0.85rem;
+    text-decoration: none;
+    transition: background 0.3s;
+  }
+
+  .btn-maps:hover {
+    background: #415a77;
+  }
+
+  .newsletter-form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+
+  .newsletter-form input {
+    flex: 1;
+    padding: 0.6rem;
+    border: 1px solid #415a77;
+    border-radius: 6px;
+    background: #1b263b;
+    color: #fff;
+  }
+
+  .newsletter-form input::placeholder {
+    color: #8d99ae;
+  }
+
+  .newsletter-form button {
+    background: #4da8da;
+    color: #fff;
+    border: none;
+    padding: 0.6rem 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+
+  .newsletter-form button:hover {
+    background: #1e90ff;
+  }
+
+  .socials {
+    margin-top: 1rem;
+  }
+
+  .socials a {
+    margin-right: 0.8rem;
+    font-size: 1.3rem;
+    color: #4da8da;
+    transition: transform 0.2s, color 0.3s;
+  }
+
+  .socials a:hover {
+    transform: scale(1.2);
+    color: #1e90ff;
+  }
+
+  .footer-bottom {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 0.85rem;
+    color: #8d99ae;
+    border-top: 1px solid #415a77;
+    padding-top: 1rem;
+  }
+
+  .phone-link {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #fff; /* si tu footer es azul */
+    text-decoration: none;
+  }
+
+  .phone-link:hover {
+    text-decoration: underline;
+    color: #ffdd57; /* un color contraste */
+  }
+
+  .hidden-link {
+    color: inherit;
+    text-decoration: none;
+    background: transparent;
+  }
+
+  /* Evita cambios de color en visitado, hover o active */
+  .hidden-link:visited,
+  .hidden-link:hover,
+  .hidden-link:active {
+    color: inherit;
+    text-decoration: none;
+  }
+</style>
+
 
   <div class="footer-container">
 
