--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -481,7 +481,7 @@ footer {
   <section class="hero fade-in" aria-label="Sol y Playa en Florianópolis — hero">
     <div class="hero-inner">
       <div>
-        <h1 class="hero-title" id="paquete-title">Sol y Playa en Florianópolis</h1>
+        <h1 class="hero-title" id="paquete-title" style="margin-top: 1rem;">Sol y Playa en Florianópolis</h1>
         <p class="hero-sub">Viví la magia de Florianópolis y sus alrededores: arenas blancas, mar cristalino y días de pura energía brasileña.</p>
 
         <div style="margin-top:16px;display:flex;gap:12px;flex-wrap:wrap">
